Scrollbar fix

--- a/frappe/public/scss/desk/frappe_datatable.scss
+++ b/frappe/public/scss/desk/frappe_datatable.scss
@@ -123,7 +123,8 @@
 	.dt-scrollable {
 		max-height: calc(100vh - 250px);
 		min-height: 100px;
-		scrollbar-width: thin;
+		scrollbar-width: initial;
+		scrollbar-color: auto;
 		border-top: 0 !important;
 	}
 
